WARNING- may not work on mobile - fixed the drop-down box that kept returning "undefined", fixed a bug where the four balancing drop-down boxes kept returning the same value as the first 2. Maybe fixed bug where the mobile font was different than the font on PC.

--- a/css/main.css
+++ b/css/main.css
@@ -124,7 +124,7 @@ button {
    text-shadow: rgba(0,0,0,.4) 0 1px 0;
    color: #ccffff;
    font-size: 25px;
-   font-family: "Comic Sans MS", "Comic Sans", cursive;
+   font-family: "Comic Sans MS", "Comic Sans"; /*cursive;*/
    text-decoration: none;
    vertical-align: middle;
 }
@@ -144,7 +144,7 @@ body {
 	line-height: 1.4;
     margin: 1.5;
     font-size: 18px;
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    font-family: "Comic Sans MS", "Comic Sans"; /*cursive*/;
     color: #07a559;
 }
 
@@ -155,7 +155,7 @@ input[type="text"], input[type="tel"], input[type="number"], input[type="checkbo
     line-height: 1.2em;
     background: #00913d;
     color: #ccffff;
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    font-family: "Comic Sans MS", "Comic Sans"; /* cursive*/
     background: -webkit-gradient(linear, left top, left bottom, from(#00333d), to(#00331a));
     -webkit-appearance: none;
     /*box-shadow*/
